--- a/package.json
+++ b/package.json
@@ -12,5 +12,8 @@
   "devDependencies": {
     "@types/jest": "^29.0.0",
     "jest": "^29.0.2"
+  },
+  "dependencies": {
+    "enquirer": "^2.4.1"
   }
 }
