--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "js-kata-template",
+  "name": "Paul-Caspar-Hanging",
   "type": "module",
-  "version": "1.1.0",
+  "version": "1.0.0",
   "author": "nbogie",
   "license": "MIT",
   "scripts": {
