add utils functions and their tests

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Paul-Caspar-Hanging",
+  "name": "paul-caspar-hanging",
   "type": "module",
   "version": "1.0.0",
   "author": "nbogie",
