--- a/package.json
+++ b/package.json
@@ -1,19 +1,21 @@
 {
-  "name": "paul-caspar-hanging",
-  "type": "module",
-  "version": "1.0.0",
-  "author": "nbogie",
-  "license": "MIT",
-  "scripts": {
-    "start": "node src/main.js",
-    "test": "node --experimental-vm-modules node_modules/jest/bin/jest.js",
-    "test:watch": "yarn test --watchAll"
-  },
-  "devDependencies": {
-    "@types/jest": "^29.0.0",
-    "jest": "^29.0.2"
-  },
-  "dependencies": {
-    "enquirer": "^2.4.1"
-  }
+    "name": "paul-caspar-hanging",
+    "type": "module",
+    "version": "1.0.0",
+    "author": "nbogie",
+    "license": "MIT",
+    "scripts": {
+        "start": "node src/hangman.js",
+        "test": "node --experimental-vm-modules node_modules/jest/bin/jest.js",
+        "test:watch": "yarn test --watchAll",
+        "format": "prettier --write ."
+    },
+    "devDependencies": {
+        "@types/jest": "^29.0.0",
+        "jest": "^29.0.2",
+        "prettier": "^3.3.2"
+    },
+    "dependencies": {
+        "enquirer": "^2.4.1"
+    }
 }
