--- a/package.json
+++ b/package.json
@@ -12,10 +12,12 @@
     },
     "devDependencies": {
         "@types/jest": "^29.0.0",
+        "@types/lodash": "^4.17.5",
         "jest": "^29.0.2",
         "prettier": "^3.3.2"
     },
     "dependencies": {
-        "enquirer": "^2.4.1"
+        "enquirer": "^2.4.1",
+        "lodash": "^4.17.21"
     }
 }
